# tshirt-detector

./: .gitignore  GUIDE_TOKEN_GIT.md  GUIDE_TOKEN_GITHUB.md  GUIDE_VISUEL.md  INSTALLATION_OUTILS.md  README.md  README_PORTABLE.md  auto_github_upload.bat  auto_github_upload.ps1  auto_github_with_auth.ps1  build_mingw.bat  index.html  one_click_upload.bat  one_click_upload_fixed.bat  package-lock.json  package.json  requirements.txt  tailwind.config.js  upload_sans_github_cli.bat  vercel.json  vite.config.ts
.github/workflows/: build.yml  deploy.yml
DetectionVetements_Source/: CMakeLists.txt  GUIDE_COMPILATION_EN_LIGNE.md  README.md  README_UTILISATION.txt  build.bat  build_portable.bat  create_portable.bat  install_opencv.bat  main.cpp
src/: App.tsx  index.css  main.tsx
src/components/: Dashboard.tsx  SettingsPanel.tsx  Statistics.tsx  WebcamDetector.tsx
src/store/: useStore.ts
src/utils/: aiModel.ts  fashionJudge.ts
